# openstack-homelab

./: .gitignore  LICENSE  README.md
openstack/init/: README.md  aggregates.tf  flavors.tf  images.tf  networks.tf  provider.tf  quotas.tf  terraform.tfvars  variables.tf
openstack/kolla/: README.md  ansible.cfg  globals.yml  hosts  pyproject.toml  requirements.yml
openstack/kolla/ansible/: 00-update.yml  02-laptop.yml  10-deploy-user.yml  20-veth.yml  99-poweroff.yml
openstack/kolla/config/: neutron.conf  nova.conf  swift.conf
openstack/kolla/config/neutron/: ml2_conf.ini
openstack/kolla/scripts/: generate_certificates.sh  octavia_image.sh  setup_ring.sh
openstack/roles/deploy-user-setup/files/: deploy-user_sudoer
openstack/roles/deploy-user-setup/meta/: main.yml
projects/: README.md
projects/core/: cloud-init.yml.tftpl  iam_minecraft.tf  instances.tf  keypair.tf  network.tf  provider.tf  secgroups_core.tf  secgroups_mail.tf  secgroups_minecraft.tf  terraform.tfvars  variables.tf
projects/core/init/: flavors.tf  images.tf  networks.tf  provider.tf  quotas.tf  terraform.tfvars  users.tf  variables.tf
projects/kubernetes/: cloud-init.yml.tftpl  instances.tf  keypair.tf  loadbalancers.tf  network.tf  provider.tf  secgroups_core.tf  secgroups_k8s.tf  terraform.tfvars  variables.tf
projects/kubernetes/init/: flavors.tf  images.tf  networks.tf  project.tf  provider.tf  quotas.tf  terraform.tfvars  users.tf  variables.tf
projects/sigl/init/: flavors.tf  networks.tf  provider.tf  quotas.tf  terraform.tfvars  users.tf  variables.tf
(+10 files in other folders)
